@@ -8,6 +8,7 @@ Version 1.7.1+svn:
    * Add an icon to show whether or not the user finished a campaign
    * Fixed bug #13831: Bug with team labels
    * Added a new experimental stacked widget widget
+   * Added support for Growl notifications
  * Miscellaneous and bugfixes:
    * Fixed language switch not affecting unit descriptions (bug #13827)
    * Fixed teleporting to impassable terrain (bug #13795)
